--- a/.drone.yml
+++ b/.drone.yml
@@ -139,14 +139,13 @@ steps:
         from_secret: STRAPI_URL_PROD
       DEVHUB_URL:
         from_secret: DEVHUB_URL
-      HOST_URL: devcenter-frontend-preview-${DRONE_PULL_REQUEST}.devrel.staging.corp.mongodb.com
     settings:
       create_repository: true
       enable_cache: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - HOST_URL=devcenter-frontend-preview-${DRONE_PULL_REQUEST}.devrel.staging.corp.mongodb.com
+        - HOST_URL=devcenter-frontend-preview.devrel.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - REALM_API_URL
@@ -155,26 +154,12 @@ steps:
         - DEVHUB_URL
         - APP_RELEASE=${DRONE_COMMIT_SHA}
       tags:
-        - devcenter-preview-build-${DRONE_PULL_REQUEST}
+        - devcenter-preview-build-${DRONE_BUILD}
         - latest-preview
       access_key:
         from_secret: ecr_access_key
       secret_key:
         from_secret: ecr_secret_key
-      values_files: ["environments/preview.yaml"]
-
-  - name: deploy-preview
-    image: quay.io/mongodb/drone-helm:v3 
-    settings:
-      chart: mongodb/web-app
-      chart_version: 4.7.3
-      add_repos: [mongodb=https://10gen.github.io/helm-charts]
-      namespace: devrel
-      release: devcenter-frontend-preview-${DRONE_PULL_REQUEST}
-      values: image.tag=devcenter-preview-build-${DRONE_PULL_REQUEST},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.hosts[0]=devcenter-frontend-preview-{$DRONE_PULL_REQUEST}.devrel.staging.corp.mongodb.com
-      api_server: https://api.staging.corp.mongodb.com
-      kubernetes_token:
-        from_secret: staging_kubernetes_token
       values_files: ["environments/preview.yaml"]
 
 trigger:
@@ -187,7 +172,7 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: uninstall-devcenter-preview
+name: deploy-devcenter-preview
 
 resources:
   requests:
@@ -195,21 +180,25 @@ resources:
     memory: 4GiB
 
 steps:
-  - name: uninstall-preview
-    image: pelotech/drone-helm3
+   - name: deploy-preview
+    image: quay.io/mongodb/drone-helm:v3 
     settings:
-      mode: uninstall
+      chart: mongodb/web-app
+      chart_version: 4.7.3
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
-      release: devcenter-frontend-preview-${DRONE_PULL_REQUEST}
-    environment: 
-      KUBE_API_SERVER: https://api.staging.corp.mongodb.com
-      KUBE_TOKEN:
+      release: devcenter-frontend-preview
+      values: image.tag=devcenter-preview-build-${DRONE_BUILD_PARENT},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
         from_secret: staging_kubernetes_token
+      values_files: ["environments/preview.yaml"]
 trigger:
   event:
-    - pull_request
-  action:
-    - closed
+    - promote
+  target:
+    - preview
+
 ---
 depends_on: null
 kind: pipeline
