--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "lodash.debounce": "4.0.8",
         "lru-cache": "7.10.1",
         "next": "12.1.0",
+        "next-auth": "^4.7.0",
         "next-seo": "5.4.0",
         "pino": "8.0.0",
         "pluralize": "8.0.0",
