adding github auth

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "lru-cache": "7.10.1",
         "next": "12.1.0",
         "next-auth": "^4.7.0",
+        "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "pino": "8.0.0",
         "pluralize": "8.0.0",
