--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@emotion/css": "11.9.0",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
+        "@leafygreen-ui/leafygreen-provider": "^2.3.0",
+        "@leafygreen-ui/mongo-nav": "^9.2.0",
         "@mdb/consistent-nav": "1.2.15",
         "@mdb/flora": "0.22.1",
         "@types/react-truncate": "2.3.4",
@@ -35,7 +37,7 @@
         "lodash.debounce": "4.0.8",
         "lru-cache": "7.10.1",
         "next": "12.1.0",
-        "next-auth": "^4.7.0",
+        "next-auth": "4.8.0",
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "pino": "8.0.0",
