echo right thing

--- a/.drone.yml
+++ b/.drone.yml
@@ -345,7 +345,7 @@ steps:
   - name: build-preview
     image: alpine
     commands:  
-      - echo closed
+      - echo opened
 
 trigger:
   event:
