--- a/.drone.yml
+++ b/.drone.yml
@@ -351,7 +351,7 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: build-preview
+name: clean-up-preview
 
 steps:
   - name: clean-up-preview
