--- a/.drone.yml
+++ b/.drone.yml
@@ -370,16 +370,16 @@ steps:
         - REALM_SEARCH_URL
         - STRAPI_URL
         - DEVHUB_URL
+        - APP_RELEASE
       tags:
         - devcenter-preview-build-${number}
-        - latest-staging
       access_key:
         from_secret: ecr_access_key
       secret_key:
         from_secret: ecr_secret_key
       values_files: ["environments/preview.yaml"]
 
-  - name: deploy-staging
+  - name: deploy-preview
     image: quay.io/mongodb/drone-helm:v3
     settings:
       chart: mongodb/web-app
