--- a/.drone.yml
+++ b/.drone.yml
@@ -337,6 +337,11 @@ kind: pipeline
 type: kubernetes
 name: build-preview
 
+resources:
+  requests:
+    cpu: 8
+    memory: 4GiB
+
 steps:
   - name: publish-preview
     image: plugins/kaniko-ecr
@@ -387,7 +392,7 @@ steps:
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-preview-${number}
-      values: image.tag=devcenter-preview-build-${number},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.hosts[0]=devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com
+      values: image.tag=devcenter-preview-build-${number},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
