--- a/.drone.yml
+++ b/.drone.yml
@@ -387,7 +387,7 @@ steps:
   - name: deploy-preview
     image: quay.io/mongodb/drone-helm:v3
     settings:
-      mode: upgrade
+      mode: upgrade # Not sure why we have to set this only here, but we do.
       chart: mongodb/web-app
       chart_version: 4.7.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
