Define configuration rules for metrics monitoring
- Setup basic rules for service uptime and container readiness
- Update staging CDN link based on Kanopy update

--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
+        - HOST_URL=mongodbcom-cdn.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - REALM_API_URL
@@ -238,7 +238,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
+        - HOST_URL=mongodbcom-cdn.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - REALM_API_URL
