--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -3,7 +3,7 @@ service:
   targetPort: 3000
 
 env:
-  HOST_URL: mongodbcom-cdn.website.staging.corp.mongodb.com
+  HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
 
 envSecrets:
   NPM_EMAIL: devcenter-secrets
@@ -46,4 +46,29 @@ resources:
 ingress:
   enabled: true
   path: /developer
-  hosts: ["mongodbcom-cdn.website.staging.corp.mongodb.com","devcenter-frontend.devrel.staging.corp.mongodb.com"]
+  hosts: ["mongodbcom-cdn.staging.corp.mongodb.com","devcenter-frontend.devrel.staging.corp.mongodb.com"]
+
+metrics:
+  enabled: true
+  interval: 30s
+  path: /developer/api/metrics
+
+prometheusRules:
+  - alert: ServiceDown
+    expr: sum(up{namespace="devrel", job=~"devcenter-frontend-web-app-.*"}) == 0
+    for: 0m
+    labels:
+      email_to: ajhenri@mongodb.com
+      severity: critical
+    annotations:
+      summary: "Service is down"
+      description: "All instances of job {{ $labels.job }} are down"
+  - alert: PodContainerNotReady
+    expr: kube_pod_container_status_ready{namespace="devrel", container=~"devcenter-frontend-.*"} == 0
+    for: 5m
+    labels:
+      email_to: ajhenri@mongodb.com
+      severity: critical
+    annotations:
+      summary: "Container readiness check failed"
+      description: "{{ $labels.instance }} of job {{ $labels.job }} container has not been ready for 5 minutes"
