Add trailing slash

--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -46,7 +46,7 @@ resources:
 metrics:
   enabled: true
   interval: 30s
-  path: /developer/api/metrics
+  path: /developer/api/metrics/
 
 prometheusRules:
   - alert: ServiceDown
