--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -67,7 +67,7 @@ prometheusRules:
     expr: sum(up{namespace="devrel", job=~"devcenter-frontend-ah-web-app"}) == 0
     for: 0m
     labels:
-      email_to: devhubplatform@mongodb.com
+      email_to: ajhenri@mongodb.com
       severity: critical
     annotations:
       summary: "Service is down"
@@ -76,7 +76,7 @@ prometheusRules:
     expr: kube_pod_container_status_ready{namespace="devrel", container=~"devcenter-frontend-ah"} == 0
     for: 5m
     labels:
-      email_to: devhubplatform@mongodb.com
+      email_to: ajhenri@mongodb.com
       severity: critical
     annotations:
       summary: "Container readiness check failed"
