Add preview webhook token to production

--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -13,6 +13,7 @@ envSecrets:
   STRAPI_URL: devcenter-secrets
   DEVHUB_URL: devcenter-secrets
   PREVIEW_SECRET_KEY: devcenter-secrets
+  PREVIEW_WEBHOOK_TOKEN: devcenter-secrets # Only production needs to have this.
 
 autoscaling:
   minReplicas: 2
