--- a/.drone.yml
+++ b/.drone.yml
@@ -343,7 +343,7 @@ resources:
     memory: 4GiB
 
 steps:
-  - name: publish-preview
+  - name: publish-preview # The ${number} var comes from the webhook query parameters.
     image: plugins/kaniko-ecr
     environment:
       NPM_AUTH:
@@ -358,10 +358,6 @@ steps:
         from_secret: STRAPI_URL_PROD
       DEVHUB_URL:
         from_secret: DEVHUB_URL
-      PREVIEW_WEBHOOK_TOKEN:
-        from_secret: PREVIEW_WEBHOOK_TOKEN
-      DRONE_TOKEN:
-        from_secret: DRONE_TOKEN
     settings:
       create_repository: true
       enable_cache: true
@@ -375,14 +371,12 @@ steps:
         - REALM_SEARCH_URL
         - STRAPI_URL
         - DEVHUB_URL
-        - APP_RELEASE
       tags:
         - devcenter-frontend-preview-build-${number}
       access_key:
         from_secret: ecr_access_key
       secret_key:
         from_secret: ecr_secret_key
-      values_files: ["environments/preview.yaml"]
 
   - name: deploy-preview
     image: quay.io/mongodb/drone-helm:v3
