--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.15",
         "@mdb/flora": "0.22.1",
+        "@sentry/nextjs": "7.7.0",
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
