--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,8 @@ steps:
   - name: build
     image: node:16-alpine
     commands:
+    - apk update
+    - apk add ca-certificates
     - yarn install --frozen-lockfile
     - yarn build
     - npm prune --production
