--- a/.drone.yml
+++ b/.drone.yml
@@ -11,13 +11,12 @@ resources:
 
 steps:
   - name: build
-    image: node:16-alpine
+    image: node:16.15.0-slim
     commands:
-    - apk update
-    - apk add ca-certificates
+    - apt-get -y update
+    - apt-get -y install --no-install-recommends ca-certificates
     - yarn install --frozen-lockfile
     - yarn build
-    - npm prune --production
     environment:
       APP_ENV: staging
       APP_RELEASE: ${DRONE_COMMIT_SHA}
