--- a/.drone.yml
+++ b/.drone.yml
@@ -289,7 +289,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
       DEVHUB_URL:
